--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "morgan": "^1.10.0"
   },
   "scripts": {
@@ -11,7 +12,6 @@
   "description": "Just a simple blog",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yghonem14/blog.git"
