--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "joi": "^17.4.2",
-    "morgan": "^1.10.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.7",
+    "mongosess": "^0.4.0",
+    "morgan": "^1.10.0",
+    "validator": "^13.6.0"
   },
   "scripts": {
     "start": "node server.js"
